# ADiCo_anki

./: .gitignore  README.md
vector_nav/: CHECKLIST.md  environment.yaml  policy_server.py  ros_bridge.py  run_sim.sh  setup.sh
vector_nav/config/: config_3a3g.yaml
vector_nav/policy/: __init__.py  loader.py
vector_nav/ros2_ws/src/vector_sim/: CMakeLists.txt  package.xml
vector_nav/ros2_ws/src/vector_sim/launch/: sim_launch.py
vector_nav/ros2_ws/src/vector_sim/models/vector/: model.config  model.sdf
vector_nav/ros2_ws/src/vector_sim/models/vector0/: model.config  model.sdf
vector_nav/ros2_ws/src/vector_sim/models/vector1/: model.config  model.sdf
vector_nav/ros2_ws/src/vector_sim/models/vector2/: model.config  model.sdf
vector_nav/ros2_ws/src/vector_sim/worlds/: vector_arena.sdf
