<?xml version="1.0"?>
<package format="3">
  <name>vector_sim</name>
  <version>0.1.0</version>
  <description>Gazebo Harmonic simulation world for Vector MARL navigation</description>
  <maintainer email="user@example.com">user</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>vector_description</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
